fixing issues on safari

--- a/apps/fecommerce/src/app/modules/fe-article/fe-article-detail/fe-article-detail.component.scss
+++ b/apps/fecommerce/src/app/modules/fe-article/fe-article-detail/fe-article-detail.component.scss
@@ -15,7 +15,6 @@ $footer-height: 176px;
                 width: calc(100% - 32px);
                 top: 112px;
                 padding: 0 !important;
-                // width: calc(100% - 32px) !important;
                 .content {
                     padding: 0 16px;
                     .list {
@@ -32,8 +31,7 @@ $footer-height: 176px;
                             }
 
                             .divider {
-                                left: 16px;
-                                width: calc(100% - 16px);
+                                width: calc(100% + 16px);
                             }
                         }
                     }
