--- a/apps/fecommerce/src/assets/styles/_global.scss
+++ b/apps/fecommerce/src/assets/styles/_global.scss
@@ -26,7 +26,7 @@ $content-height: calc(100vh - #{$header-height});
 
   main {
     flex: 1 1 auto;
-    // height: $content-height;
+    height: $content-height;
     max-height: $content-height;
 
     .container {
